change composer repo

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "dolejska-daniel/riot-api",
+	"name": "klinger2709/riot-api",
 	"type": "library",
 	"description": "Riot League of Legends & DataDragon API wrapper for PHP7",
 	"keywords": ["riot", "league of legends", "data dragon", "api", "wrapper", "php7"],
